# smartender-global/smartender-global-backend/controllers/Authentication.js
@@ -4,9 +4,9 @@ var utils = require('../utils/writer.js');
 var Authentication = require('../service/AuthenticationService');
 
 module.exports.loginPOST = function loginPOST (req, res, next) {
-  var loginform = req.swagger.params['loginform'].value;
+  var login = req.swagger.params['login'].value;
   var password = req.swagger.params['password'].value;
-  Authentication.loginPOST(loginform,password)
+  Authentication.loginPOST(login,password)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -17,6 +17,16 @@ module.exports.loginPOST = function loginPOST (req, res, next) {
 
 module.exports.logoutPOST = function logoutPOST (req, res, next) {
   Authentication.logoutPOST()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.registerPOST = function registerPOST (req, res, next) {
+  Authentication.registerPOST()
     .then(function (response) {
       utils.writeJson(res, response);
     })
